apps/envoy-gateway/example/go-app.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: go-app
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: go-app
  namespace: go-app
spec:
  replicas: 2
  selector:
    matchLabels:
      app: go-app
  template:
    metadata:
      labels:
        app: go-app
    spec:
      containers:
        - name: go-app
          image: diquzart/go-app:v2.0.1
          ports:
            - containerPort: 8080

          resources:
            requests:
              cpu: 200m
              memory: 256Mi
            limits:
              cpu: "1"
              memory: 512Mi
---
apiVersion: v1
kind: Service
metadata:
  name: go-app
  namespace: go-app
spec:
  selector:
    app: go-app
  ports:
    - port: 8080
      targetPort: 8080
---
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: go-app
  namespace: go-app
spec:
  gatewayClassName: default
  listeners:
    - name: http
      protocol: HTTP
      port: 80
      hostname: go-app.example.com # add hostname to make listener unique
      allowedRoutes:
        namespaces:
          from: Same
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: go-app
  namespace: go-app
spec:
  parentRefs:
    - group: gateway.networking.k8s.io
      kind: Gateway
      name: go-app
      namespace: go-app
      sectionName: http
  hostnames:
    - go-app.example.com
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: go-app
          port: 8080
